syntax = "proto3";

package com.telusTest.api.protoPackage;

message TodoResponse {
    int32 id = 1;
    string description = 2;
    string completionStatus = 3;
}

message TodoReq {
    int32 id = 1;
    string description = 2;
    string completionStatus = 3;
}

message GetTodoRequest {
    int32 id = 1;
}

message Empty {

}


service TodoService {
    rpc GetTodo (GetTodoRequest) returns (TodoResponse) {}
    rpc GetAllTodo (Empty) returns (stream TodoResponse) {}
    rpc UpdateTodo (TodoReq) returns (TodoResponse) {}
    rpc DeleteTodo (GetTodoRequest) returns (Empty) {}
}
